[package]
name = "sublink-xcm"
version = "0.0.1"
authors = ["LaurentTrk <laurent.turek@gmail.com>"]
edition = "2021"
description = "Sublink XCM Pallet, used to transfer price feeds accross parachains"


[dependencies]
log = { version = "0.4", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.137", optional = true, features = ["derive"] }

sp-std = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20" }
sp-runtime = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20" }
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }

xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.20" }

cumulus-pallet-xcm = { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.20" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", default-features = false,  branch = "polkadot-v0.9.20" }

pallet-chainlink-feed = { path = '../pallet-chainlink-feed', default-features = false }

[features]
default = ["std"]
std = [
    "log/std",
	"codec/std",
	"scale-info/std",
	"serde",
	"cumulus-primitives-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-chainlink-feed/std",
]