[package]
name = "runtime-chainlink-ink-extension"
version = "0.0.1"
authors = ["LaurentTrk <laurent.turek@gmail.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20" }
frame-system = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "polkadot-v0.9.20" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }
pallet-contracts = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.20" }

pallet-chainlink-feed = { path = '../../pallet-chainlink-feed', default-features = false }

[features]
default = ["std"]
std = [
    "log/std",
    "codec/std",
	"sp-std/std",
	"frame-system/std",
    "frame-support/std",
    "pallet-contracts/std",
    "pallet-chainlink-feed/std",
]