[package]
name = "chainlink-ink-extension"
version = "0.0.1"
authors = ["LaurentTrk <laurent.turek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink_primitives = { version = "3.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { version = "3.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { version = "3.0", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { version = "3.0", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "full"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_env/ink-debug",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
]
chainlink-ink-extension = []